--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
+  <div class="main-nav-links hidden">
+    <a class='nav-link' id='nav-submit-story' href="">Submit</a>
+    <a class='nav-link' id='nav-favorites' href="">Favorites</a>
+    <a class='nav-link' id='nav-my-stories' href="">My Stories</a>
+  </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
@@ -46,6 +51,24 @@
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
+
+  <!-- new story form-->
+  <form action="" class="hidden" id="submit-form">
+    <div>
+      <label for="create-author">author</label>
+      <input id="create-author" placeholder="author name">
+    </div>
+    <div>
+      <label for="create-title">author</label>
+      <input id="create-title" placeholder="story title">
+    </div>
+    <div>
+      <label for="create-url">author</label>
+      <input id="create-url" type="url" placeholder="story url">
+    </div>
+    <button type="submit">Submit</button>
+    <hr>
+  </form>
 
   <!-- loading message (removed by JS after stories loaded) -->
   <div id="stories-loading-msg">Loading&hellip;</div>
@@ -94,6 +117,18 @@
     </div>
     <button type="submit">create account</button>
   </form>
+</section>
+
+<!-- User profile-->
+<section id="user-profile" class="hidden">
+  <div class="user-profile-box container">
+    <h4>User Profile Info</h4>
+    <section>
+      <div>Name: <span id="profile-name"></span></div>
+      <div>Username: <span id="rofile-username"></span></div>
+      <div>Account Created: <span id="profile-account-date"></span></div>
+    </section>
+  </div>
 </section>
 
 <!-- Library JS & our JS -->
