fixed stars not showing

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h4>User Profile Info</h4>
     <section>
       <div>Name: <span id="profile-name"></span></div>
-      <div>Username: <span id="rofile-username"></span></div>
+      <div>Username: <span id="profile-username"></span></div>
       <div>Account Created: <span id="profile-account-date"></span></div>
     </section>
   </div>
