--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
   <div class="main-nav-links hidden">
-    <a class='nav-link' id='nav-submit-story' href="">Submit</a>
-    <a class='nav-link' id='nav-favorites' href="">Favorites</a>
-    <a class='nav-link' id='nav-my-stories' href="">My Stories</a>
+    <a class='nav-link' id='nav-submit-story' href="#">Submit</a>
+    <a class='nav-link' id='nav-favorites' href="#">Favorites</a>
+    <a class='nav-link' id='nav-my-stories' href="#">My Stories</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
